<resources>
    <string name="app_name">Kueue</string>
    <string name="com_spotify_sdk_redirect_host">yourcustomprotocol</string>
    <string name="com_spotify_sdk_redirect_scheme">callback</string>
    <string name="token" />
    <string name="app_logo">App Logo</string>
    <string name="kueue_description">Kueue lets you add any track to your already playing spotify queue.</string>
    <string name="login_with_spotify">Login with Spotify</string>
    <string name="login_as_another_user">Login as another user ?</string>
    <string name="login_description">Don\'t worry, Kueue won\'t be able to access your private music library.</string>
    <string name="login_error">An error occured while logging into Spotify.  Please try later.</string>
    <string name="login_error_flow_cancelled">Login operation was cancelled. Please try again.</string>
    <string name="logged_in_user">Logged in as</string>
    <string name="adding_a_song">Adding song to your spotify \n queue ...</string>
    <string name="sorry_msg">We are Sorry.</string>
    <string name="album_not_support_msg">Currently, adding an whole album is not supported.</string>
    <string name="playlist_not_support_msg">Currently, adding an whole album is not supported.</string>
    <string name="error_msg">Something bad happened while processing the last request.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_track">dummy track name</string>
    <string name="by">by</string>
    <string name="dummy_artist">dummy artist name</string>
    <string name="added_to_queue">was added to \n the queue.</string>
    <string name="toggle_play_pause">Toggle Play/Pause</string>
</resources>